@@ -7,6 +7,7 @@
 	* Added feature #32635: Update countries to level of ISO 3166-1:2006 - Newsletter VI-9 (2011-06-12)
 	* Added feature #32636: Update countries to level of ISO 3166-1:2006 - Newsletter VI-10 (2011-08-09)
 	* Added feature #32637: Update countries to level of ISO 3166-1:2006 - Newsletter VI-11 (2011-11-08)
+	* Added feature #28104: Polish country zones (Thanks to Tomasz Krawczyk)
 
 2011-01-25  Stanislas Rolland  <typo3@sjbr.ca>
 
